--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,13 @@
     height: 100vh;
     background-color: lightgray;
 }
+
+button {
+    height: 25px;
+    width: 200px;
+    margin: 20px 0;
+    background-color: #334aac;
+    border-radius: 4px;
+    border: none;
+    color: white;
+}
