--- a/src/components/Styles/Game.scss
+++ b/src/components/Styles/Game.scss
@@ -1,3 +1,5 @@
+@import "../Sass/App.scss";
+
 .game {
   display: flex;
   flex-direction: column;
@@ -10,7 +12,6 @@
   grid-template-rows: repeat(5, 160px);
   width: 800px;
   height: 800px;
-  background-color: lightblue;
 }
 
 .tile {
@@ -19,7 +20,8 @@
   align-items: center;
   width: 159px;
   height: 159px;
-  border: 1px solid black;
+  border: 1px solid $black;
+  background-color: $looneyblue;
 }
 
 .tweety-image,
@@ -44,3 +46,9 @@
   width: 125px;
 }
 
+.button {
+  background-color: $martianred;
+  color: $white;
+  margin: 10px 0;
+  padding: 10px;
+}
